--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,9 @@
 unbind C-b
 set-option -g prefix C-a
 
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
+
