--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,3 +7,10 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# navigate with vim keys
+bind -r h select-pane -L  # move left
+bind -r j select-pane -D  # move down
+bind -r k select-pane -U  # move up
+bind -r l select-pane -R  # move right
+bind > swap-pane -D       # swap current pane with the next one
+bind < swap-pane -U       # swap current pane with the previous one
