--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,5 +12,16 @@ bind -r h select-pane -L  # move left
 bind -r j select-pane -D  # move down
 bind -r k select-pane -U  # move up
 bind -r l select-pane -R  # move right
+
+# pane swap
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
+
+# resize panes
+bind -r H resize-pane -L 2
+bind -r J resize-pane -D 2
+bind -r K resize-pane -U 2
+bind -r L resize-pane -R 2
+
+# resource
+bind r source-file ~/.tmux.conf
